package Iterator;

public interface Iterator {
    public boolean hasNext();
    public Object next();
}
